big fucking refactoring done