@@ -1,8 +1,9 @@
 package com.push.lazyir.service.managers.settings;
 
-import com.push.lazyir.Loggout;
 import com.push.lazyir.devices.ModuleSetting;
 import com.push.lazyir.modules.command.Command;
+import lombok.Synchronized;
+import lombok.extern.slf4j.Slf4j;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.Node;
@@ -12,106 +13,33 @@ import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import java.io.*;
 import java.net.InetAddress;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.*;
 
-/**
- * Created by buhalo on 12.03.17.
- */
+
+@Slf4j
 public class SettingManager implements Manager {
 
     private File settings;
     protected File cache;
     private File modules;
-    private File localization;
     private Properties properties;
-    private FileInputStream fileInputStream;
-    private FileOutputStream fileOutputStream;
-    private String baseProp = "baseProp";
-    private String rusLoc = "russianLoc";
-    private String engLoc = "engLoc";
-    // file contains modules and it's setting's
-    private String confModules = "modules.xml";
-    public static  String currentUsersHomeDir = System.getProperty("user.home") +  File.separator + ".Jasech" + File.separator + "ConnectedDevices";
-    private String mockId = null;
-    private String keyPath;
+    public static final  String CURRENT_USERS_HOME_DIR = System.getProperty("user.home") +  File.separator + ".Jasech" + File.separator + "ConnectedDevices";
 
-    public SettingManager()
-    {
-        baseProp = "baseProp";
-        properties = new Properties();
-        String settingFilePath = System.getProperty("user.home") + File.separator + ".Jasech";
-        modules = new File(settingFilePath + File.separator + confModules);
-        settings = new File(settingFilePath + File.separator+ "settingFile.ini");
-        cache = new File(settingFilePath + File.separator + "adresses.txt");
-        keyPath = settingFilePath + File.separator + "keyFile.pem";
-        File dir = new File(settingFilePath);
-        String localizationPath = settingFilePath + File.separator + "localization";
-        localization = new File(localizationPath);
-        File engLocF =new File(localizationPath + File.separator + "loc_eng.ini");
-        File rusLocF = new File(localizationPath + File.separator + "loc_rus.ini");
-        if(!dir.exists())
-        {
-            dir.mkdir();
-        }
-        if(!localization.exists()){
-            localization.mkdir();
-        }
-        if(!engLocF.exists() || !engLocF.isDirectory()){
-            copyFromBackupToActual(engLoc,engLocF);
-        }
-        if(!rusLocF.exists() || !rusLocF.isDirectory()){
-            copyFromBackupToActual(rusLoc,rusLocF);
-        }
-        if(!settings.exists() || !settings.isDirectory())
-        {
-            copyFromBackupToActual(baseProp,settings);
-        }
-        if(!modules.exists() || !modules.isDirectory()){
-            copyFromBackupToActualXml("modules.xml",modules);
-        }
-        if(!cache.exists() || !cache.isDirectory())
-        {
-            try {
-                cache.createNewFile();
-            } catch (IOException e) {
-                Loggout.e("SettingManager",e.toString());
-            }
-        }
-
-    }
 
     private void copyFromBackupToActualXml(String s, File modules) {
-        BufferedReader reader = null;
-        BufferedWriter writer = null;
-        try {
+        ClassLoader classLoader =getClass().getClassLoader();
+        try(BufferedReader reader = new BufferedReader(new InputStreamReader(classLoader.getResourceAsStream(s), "UTF-8"));
+            BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(Files.newOutputStream(modules.toPath()), "UTF-8"))) {
             if (modules.createNewFile()) {
-                ClassLoader classLoader =getClass().getClassLoader();
-                 reader = new BufferedReader(
-                        new InputStreamReader(
-                                classLoader.getResourceAsStream(s),
-                                "UTF-8"
-                        )
-                );
-                 writer = new BufferedWriter(
-                        new OutputStreamWriter(
-                                new FileOutputStream(modules),
-                                "UTF-8"
-                        )
-                );
                 String read;
                 while((read = reader.readLine()) != null){
                     writer.write(read);
                 }
             }
         }catch (IOException e){
-
-        }finally {
-            try {
-                reader.close();
-                writer.close();
-            }catch (Exception e){
-
-            }
+            log.error("error in copyFromBackupToActualXml from: "+ s + " to: " + modules.getAbsolutePath());
         }
     }
 
@@ -119,7 +47,8 @@ public class SettingManager implements Manager {
     get enabled modules from xml list, and instantiate ModuleSetting entity
     return the list
     * */
-    public synchronized List<ModuleSetting> getMyEnabledModules(){
+    @Synchronized
+    public List<ModuleSetting> getMyEnabledModules(){
         List<ModuleSetting> modulesResultList = new ArrayList<>();
         try {
             DocumentBuilderFactory dbFactory = DocumentBuilderFactory.newInstance();
@@ -128,10 +57,10 @@ public class SettingManager implements Manager {
             NodeList elements = doc.getDocumentElement().getElementsByTagName("module");
             for(int i = 0;i<elements.getLength();i++){
                 Element item = (Element)elements.item(i);
-                Boolean enabled = new Boolean(item.getElementsByTagName("enabled").item(0).getTextContent());
+                Boolean enabled = Boolean.valueOf(item.getElementsByTagName("enabled").item(0).getTextContent());
                 if(enabled) {
                     String name = item.getElementsByTagName("name").item(0).getTextContent();
-                    Boolean workOnly = new Boolean(item.getElementsByTagName("workOnly").item(0).getTextContent());
+                    Boolean workOnly = Boolean.valueOf(item.getElementsByTagName("workOnly").item(0).getTextContent());
                     List<String> ignoredIds = new ArrayList<>();
                     NodeList ignoredElements = item.getElementsByTagName("ignored");
                     int ignoredL = ignoredElements.getLength();
@@ -143,190 +72,190 @@ public class SettingManager implements Manager {
                 }
             }
         }catch (Exception e){
-            Loggout.e("SettingManager","Error in getMyEnabledModules ",e);
+            log.error("error in getMyEnabledModules",e);
         }
         return modulesResultList;
     }
 
     //clear device internal sftp temp folder's
-    public synchronized void clearFolders(){
-        File file = new File(currentUsersHomeDir);
+    @Synchronized
+    public void clearFolders(){
+        File file = new File(CURRENT_USERS_HOME_DIR);
         File[] files = file.listFiles();
-        if (files != null)
-            for (File file1 : files) {
-                file1.delete();
+        if (files != null) {
+            for (File fl : files) {
+                    try {
+                        if(fl.exists()) {
+                            Files.delete(Paths.get(fl.getPath()));
+                        }
+                    } catch (IOException e) {
+                        log.info("can't delete file: "+ fl.getAbsolutePath(),e);
+                    }
+                }
             }
-
     }
 
-    private synchronized void copyFromBackupToActual(String internalFile,File toWhoCopy) {
-        InputStream is = null;
-        try {
-            ClassLoader classLoader =getClass().getClassLoader();
-             is = classLoader.getResourceAsStream(internalFile);
-                    properties.load(is);
-            if(toWhoCopy.createNewFile())
-            {
-                fileOutputStream = new FileOutputStream(toWhoCopy);
+    @Synchronized
+    private void copyFromBackupToActual(String internalFile,File toWhoCopy) {
+        ClassLoader classLoader =getClass().getClassLoader();
+        try(OutputStream fileOutputStream = Files.newOutputStream(toWhoCopy.toPath());
+             InputStream is = classLoader.getResourceAsStream(internalFile)) {
+            properties.load(is);
+            boolean exist = toWhoCopy.exists();
+            if(!exist) {
+               exist = toWhoCopy.createNewFile();
+            }
+            if(exist){
                 properties.store(fileOutputStream,"hey ja");
             }
         } catch (IOException e) {
-            Loggout.e("SettingManager",e.toString());
-        }finally {
-            try {
-                if(is != null)
-              is.close();
-              fileOutputStream.close();
-            } catch (Exception e) {
-                Loggout.e("SettingManager",e.toString());
-            }
+            log.error("error while copyFromBackupToActual internalFile: " + internalFile + " toWhoCopy: " + toWhoCopy);
         }
     }
 
 
 
     @Override
-    public synchronized void delete(String key) {
-        try {
-            fileInputStream = new FileInputStream(settings);
-            fileOutputStream = new FileOutputStream(settings);
+    @Synchronized
+    public void delete(String key) {
+        try(InputStream fileInputStream = Files.newInputStream(settings.toPath());
+            OutputStream fileOutputStream = Files.newOutputStream(settings.toPath())) {
             properties.load(fileInputStream);
             properties.remove(key);
             properties.store(fileOutputStream,"removed key");
         } catch (IOException e) {
-            Loggout.e("SettingManager",e.toString());
-        }finally {
-            try {
-                fileInputStream.close();
-                fileOutputStream.close();
-            } catch (IOException e) {
-                Loggout.e("SettingManager",e.toString());
-            }
+            log.error("error in delete key: " + key);
         }
     }
 
     @Override
-    public synchronized String get(String key) {
-        String get = null;
-        try {
-            fileInputStream = new FileInputStream(settings);
-            properties.load(fileInputStream);
-            get = properties.getProperty(key);
-        } catch (IOException e) {
-            Loggout.e("SettingManager",e.toString());
-        }finally {
-            try {
-                fileInputStream.close();
-            } catch (IOException e) {
-                Loggout.e("SettingManager",e.toString());
-            }
-        }
-        return get;
+    @Synchronized
+    public String get(String key) {
+        return properties.getProperty(key);
     }
 
-    public synchronized void saveCache(InetAddress inetAddress)
-    {
+    @Synchronized
+    public void saveCache(InetAddress inetAddress){
         String strAddr = inetAddress.getHostAddress();
-        BufferedWriter writer = null;
         Set<String> addresses = getAllCachedThings();
         addresses.add(strAddr);
-        try {
-           writer = new BufferedWriter(new FileWriter(cache));
-           String line;
+        try(BufferedWriter writer = Files.newBufferedWriter(cache.toPath())) {
            int count = 1;
-         //  writer.write(strAddr);
-        //   writer.newLine();
             for (String address : addresses) {
-                if(count >= 20)
-                {
+                if(count >= 20) {
                     break;
                 }
                 writer.write(address);
                 writer.newLine();
                 count++;
             }
-
         } catch (IOException e) {
-            Loggout.e("SettingManager",e.toString());
-        }finally {
-            try {
-                writer.close();
-            } catch (Exception e) {
-                Loggout.e("SettingManager",e.toString());
-            }
+            log.error("error in saveCache",e);
         }
     }
 
-    public synchronized Set<String> getAllCachedThings()
-    {
-        BufferedReader reader = null;
+    @Synchronized
+    public Set<String> getAllCachedThings() {
         Set<String> addresses = new HashSet<>();
-        try {
-            reader = new BufferedReader(new FileReader(cache));
+        try(BufferedReader reader = Files.newBufferedReader(cache.toPath())) {
             String line;
-            while((line = reader.readLine()) != null)
-            {
+            while((line = reader.readLine()) != null) {
                 addresses.add(line);
             }
-
         } catch (IOException e) {
-            Loggout.e("SettingManager",e.toString());
-        }finally {
-            try {
-                reader.close();
-            } catch (Exception e) {
-                Loggout.e("SettingManager",e.toString());
-            }
+            log.error("error in getAllCachedThings",e);
         }
         return addresses;
     }
 
 
     @Override
-    public synchronized void save(List<Command> commandList) {
-
+    public void save(List<Command> commandList) {
+        //nothing to do
     }
 
-    public synchronized void saveValue(String key,String value)
-    {
-        try {
-            fileInputStream = new FileInputStream(settings);
-            fileOutputStream = new FileOutputStream(settings);
+    @Synchronized
+    public void saveValue(String key,String value) {
+        try(InputStream fileInputStream = Files.newInputStream(settings.toPath());
+            OutputStream fileOutputStream = Files.newOutputStream(settings.toPath())) {
             properties.load(fileInputStream);
             properties.setProperty(key,value);
             properties.store(fileOutputStream,"add key");
         } catch (IOException e) {
-            Loggout.e("SettingManager",e.toString());
-        }finally {
+            log.error("error while save value - key: " + key + " value: " + value,e);
+        }
+    }
+
+    public void init() {
+        properties = new Properties();
+        String settingFilePath = System.getProperty("user.home") + File.separator + ".Jasech";
+        createFolders(settingFilePath);
+        populateProperties();
+    }
+
+    private void populateProperties() {
+        try(InputStream fileInputStream = Files.newInputStream(settings.toPath())) {
+            properties.load(fileInputStream);
+        } catch (IOException e) {
+            log.error("error in populateProperties",e);
+        }
+    }
+
+    private void createFolders(String settingFilePath) {
+        File dir = new File(settingFilePath);
+        if(!dir.exists()) {
+            dir.mkdir();
+        }
+        createLocalizationFiles(settingFilePath + File.separator + "localization");
+        createSettingsFiles("baseProp",settingFilePath);
+        createModulesFiles("modules.xml",settingFilePath);
+        createCacheFiles("adresses.txt",settingFilePath);
+
+
+    }
+
+    private void createCacheFiles(String fileName, String settingFilePath) {
+        cache = new File(settingFilePath + File.separator + fileName);
+        if(!cache.exists()) {
             try {
-                fileInputStream.close();
-                fileOutputStream.close();
+                Files.createFile(cache.toPath());
             } catch (IOException e) {
-                Loggout.e("SettingManager",e.toString());
+                log.error("error while creating cache file",e);
             }
         }
     }
 
-    public String mockgetHash()
-    {
-        return mockId;
-    }
-
-    public void setMockId(String id)
-    {
-        mockId = id;
-    }
-
-    public synchronized String getKeyPath() {
-        File file = new File(keyPath);
-        if(!file.exists()) {
-            try {
-                file.createNewFile();
-            } catch (IOException e) {
-                Loggout.e("SettingManager",e.toString());
-            }
+    private void createModulesFiles(String modulesBackup, String settingFilePath) {
+        // file contains modules and it's setting's
+        String confModules = "modules.xml";
+        modules = new File(settingFilePath + File.separator + confModules);
+        if(!modules.exists() || !modules.isDirectory()){
+            copyFromBackupToActualXml(modulesBackup,modules);
         }
 
-        return keyPath;
+    }
+
+    private void createSettingsFiles(String baseProp, String settingFilePath) {
+        settings = new File(settingFilePath + File.separator+ "settingFile.ini");
+        if(!settings.exists() || !settings.isDirectory()) {
+            copyFromBackupToActual(baseProp,settings);
+        }
+    }
+
+    private void createLocalizationFiles(String localizationPath) {
+        File localization = new File(localizationPath);
+        File engLocF =new File(localizationPath + File.separator + "loc_eng.ini");
+        File rusLocF = new File(localizationPath + File.separator + "loc_rus.ini");
+        if(!localization.exists()){
+            localization.mkdir();
+        }
+        if(!engLocF.exists() || !engLocF.isDirectory()){
+            String engLoc = "engLoc";
+            copyFromBackupToActual(engLoc,engLocF);
+        }
+        if(!rusLocF.exists() || !rusLocF.isDirectory()){
+            String rusLoc = "russianLoc";
+            copyFromBackupToActual(rusLoc,rusLocF);
+        }
     }
 }
